# uri-rs

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
regex/: enum.CaptureNames.html  struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
src/: lib.rs
src/uri/: lib.rs.html
uri/: fn.is_uri.html  index.html  sidebar-items.js  struct.Uri.html
